--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+blinker==1.4
 Flask==0.10.1
+Flask-Cache==0.13.1
+Flask-DebugToolbar==0.10.0
+Flask-Login==0.3.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
