--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,13 @@ Flask==0.10.1
 Flask-Cache==0.13.1
 Flask-DebugToolbar==0.10.0
 Flask-Login==0.3.2
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
+gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-Werkzeug==0.11.3
-wheel==0.26.0
+SQLAlchemy==1.0.12
+Werkzeug==0.11.4
+wheel==0.24.0
+WTForms==2.1
