--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Cache==0.13.1
 Flask-DebugToolbar==0.10.0
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
+Flask-Uploads==0.2.0
 Flask-WTF==0.12
 gunicorn==19.4.5
 itsdangerous==0.24
