--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+argh==0.26.1
+bcrypt==2.0.0
 blinker==1.4
+cffi==1.5.2
 Flask==0.10.1
+Flask-Bcrypt==0.7.1
 Flask-Cache==0.13.1
 Flask-DebugToolbar==0.10.0
 Flask-Login==0.3.2
@@ -10,7 +14,13 @@ gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+pathtools==0.1.2
+pycparser==2.14
+PyYAML==3.11
+redis==2.10.5
+six==1.10.0
 SQLAlchemy==1.0.12
+watchdog==0.8.3
 Werkzeug==0.11.4
 wheel==0.24.0
 WTForms==2.1
