--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+amqp==1.4.9
+anyjson==0.3.3
 argh==0.26.1
 bcrypt==2.0.0
+billiard==3.3.0.23
 blinker==1.4
+celery==3.1.20
 cffi==1.5.2
 Flask==0.10.1
 Flask-Bcrypt==0.7.1
@@ -13,9 +17,11 @@ Flask-WTF==0.12
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
+kombu==3.0.34
 MarkupSafe==0.23
 pathtools==0.1.2
 pycparser==2.14
+pytz==2015.7
 PyYAML==3.11
 redis==2.10.5
 six==1.10.0
