--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,14 @@ blinker==1.4
 celery==3.1.20
 cffi==1.5.2
 Flask==0.10.1
+Flask-Admin==1.4.0
 Flask-Bcrypt==0.7.1
 Flask-Cache==0.13.1
 Flask-DebugToolbar==0.10.0
 Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-Uploads==0.2.0
 Flask-WTF==0.12
@@ -19,8 +23,10 @@ itsdangerous==0.24
 Jinja2==2.8
 kombu==3.0.34
 MarkupSafe==0.23
+passlib==1.6.5
 pathtools==0.1.2
 pycparser==2.14
+PyMySQL==0.7.2
 pytz==2015.7
 PyYAML==3.11
 redis==2.10.5
@@ -28,5 +34,4 @@ six==1.10.0
 SQLAlchemy==1.0.12
 watchdog==0.8.3
 Werkzeug==0.11.4
-wheel==0.24.0
 WTForms==2.1
