--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==1.4.9
+aniso8601==1.1.0
 anyjson==0.3.3
 argh==0.26.1
 Babel==2.3.4
@@ -7,6 +8,8 @@ billiard==3.3.0.23
 blinker==1.4
 celery==3.1.20
 cffi==1.5.2
+ecdsa==0.13
+Fabric==1.11.1
 Faker==0.0.4
 Flask==0.10.1
 Flask-Admin==1.4.0
@@ -17,19 +20,25 @@ Flask-DebugToolbar==0.10.0
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
+Flask-RESTful==0.3.5
 Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-Uploads==0.2.0
 Flask-WTF==0.12
+gevent==1.1.1
+greenlet==0.4.9
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 kombu==3.0.34
 MarkupSafe==0.23
+paramiko==1.17.0
 passlib==1.6.5
 pathtools==0.1.2
 pycparser==2.14
+pycrypto==2.6.1
 PyMySQL==0.7.2
+python-dateutil==2.5.3
 pytz==2015.7
 PyYAML==3.11
 redis==2.10.5
