--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,27 @@
+alembic==0.8.7
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
+blinker==1.4
+celery==3.1.23
 click==6.6
 dominate==2.2.1
 Flask==0.11.1
 Flask-Bootstrap==3.3.6.0
+Flask-Celery==2.4.3
+Flask-Mail==0.9.1
+Flask-Migrate==2.0.0
 Flask-Moment==0.5.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
+kombu==3.0.35
+Mako==1.0.4
 MarkupSafe==0.23
+python-editor==1.0.1
+pytz==2016.6.1
 SQLAlchemy==1.0.14
 visitor==0.1.3
 Werkzeug==0.11.10
