--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
 alembic==0.8.7
 amqp==1.4.9
 anyjson==0.3.3
+bcrypt==3.1.0
 billiard==3.3.0.23
 blinker==1.4
 celery==3.1.23
+cffi==1.7.0
 click==6.6
+contextlib2==0.5.4
 dominate==2.2.1
 Flask==0.11.1
+Flask-Admin==1.4.2
 Flask-Bootstrap==3.3.6.0
 Flask-Celery==2.4.3
+Flask-DebugToolbar==0.10.0
+Flask-Login==0.3.2
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.0
 Flask-Moment==0.5.1
+Flask-Principal==0.4.0
 Flask-Script==2.0.5
+Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 itsdangerous==0.24
@@ -20,8 +28,13 @@ Jinja2==2.8
 kombu==3.0.35
 Mako==1.0.4
 MarkupSafe==0.23
+passlib==1.6.5
+pycparser==2.14
+PyMySQL==0.7.6
 python-editor==1.0.1
 pytz==2016.6.1
+raven==5.24.3
+six==1.10.0
 SQLAlchemy==1.0.14
 visitor==0.1.3
 Werkzeug==0.11.10
