--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 kombu==3.0.35
+lxml==3.6.4
 Mako==1.0.4
 MarkupSafe==0.23
 passlib==1.6.5
@@ -43,3 +44,4 @@ vine==1.1.1
 visitor==0.1.3
 Werkzeug==0.11.10
 WTForms==2.1
+xmltodict==0.10.2
