--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Flask-Script==2.0.5
 Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+ForgeryPy==0.1
 itsdangerous==0.24
 Jinja2==2.8
 kombu==3.0.35
